[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/World Assets/Scripts/ContainerAsset.gd" type="Script" id=1]
[ext_resource path="res://Resources/Assets/container_inside.png" type="Texture" id=2]
[ext_resource path="res://Resources/Assets/container_outside.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1330.11, 25.2959 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1315.67, 446.882 )

[node name="StorageContainer" type="StaticBody2D"]
script = ExtResource( 1 )

[node name="CollisionBarTop" type="CollisionShape2D" parent="."]
position = Vector2( 0, -476.25 )
shape = SubResource( 1 )

[node name="CollisionBarBottom" type="CollisionShape2D" parent="."]
position = Vector2( 0, 474.156 )
shape = SubResource( 1 )

[node name="container_inside" type="Sprite" parent="."]
position = Vector2( -2.66968, -2.66968 )
scale = Vector2( 4, 4 )
z_index = -1
texture = ExtResource( 2 )

[node name="container_outside" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 1 )
scale = Vector2( 4, 4 )
z_index = 1
texture = ExtResource( 3 )

[node name="InsideArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="InsideArea"]
shape = SubResource( 2 )
[connection signal="body_entered" from="InsideArea" to="." method="_on_InsideArea_body_entered"]
[connection signal="body_exited" from="InsideArea" to="." method="_on_InsideArea_body_exited"]
